--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,6 @@ h2, h3, h4, h5, h6{
     margin-bottom: 30px;
     font-weight: 500;
     margin-top: 1em;
-
 }
 .first_text p{
     line-height: 1.6;
@@ -203,4 +202,25 @@ h2, h3, h4, h5, h6{
     margin-top: 30px;
     box-shadow: 0px 0px 8px gray;
     font-family: 'Rubik', sans-serif;
+}
+/* Second Container */
+.second_container h2{
+    margin-bottom: 30px;
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: 7em;
+    text-align: center;
+}
+
+.second_container p{
+    line-height: 1.6;
+    text-align: center;
+    padding: 0px 4vh;
+}
+
+.second_container button{
+    background: none;
+    border: none;
+    border-bottom: 1px solid #ff0000;
+    
 }
