--- a/styles/style.css
+++ b/styles/style.css
@@ -340,7 +340,20 @@ h2, h3, h4, h5, h6{
     padding: 0px 4vh;
     margin-bottom: 7vh;
 }
-
+.fourth_container button{
+    background-color: hsl(231, 69%, 60%);
+    border: none;
+    color: #fff;
+    padding: 12px 17px;
+    border-radius: 5px;
+    font-size: 19px;
+    margin: 2vh auto;
+    font-family: 'Rubik', sans-serif;
+    text-align: center;
+}
+.fourth_container{
+    text-align: center;
+}
 /* Estilos del acordeón */
 .acordeon{
     max-width: 100vh;
@@ -389,13 +402,111 @@ div.subapartado:hover div.info{
     }
 }
 
-
 /* End of acordeon styles */
 
+/* Five container styles */
+.five_container{
+    background-color: hsl(231, 69%, 60%);
+    width: 100%;
+    color: #fff;
+    text-align: center;
+}
+.five_container p{
+    padding-top: 10vh;
+    color: #fff;
+}
+.five_container h6{
+    padding: 3vh 0;
+    font-size: 25px;
+    font-weight: 400;
+}
+.five_container input{
+    padding: 12px 18%;
+    margin: 8px ;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 5px;
+    font-size: 17px;
+    font-family: 'Rubik', sans-serif;
+}
+.five_container button{
+    background-color: hsl(0, 94%, 66%);
+    border: none;
+    color: #fff;
+    padding: 12px 30%;
+    border-radius: 5px;
+    font-size: 19px;
+    margin: 2vh auto;
+    font-family: 'Rubik', sans-serif;
+}
+/* End of five container styles */
 
-@media screen and (max-width: 1024px ) {
+
+@media screen and (min-width: 1024px ) {
     .first_screen {
         width: 1%;
         background-color: #ff0000;
+    }
+}
+
+/* header styles */
+
+footer{
+    height:auto;
+}
+.pie-pagina{
+    width: 100%;
+    background-color: hsl(229, 31%, 21%);
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+
+.pie-pagina .grupo-1 .box p{
+    text-transform: uppercase;
+    color: #efefef;
+    font-size: 18px;
+    margin-bottom: 10px;
+    text-align: center;
+    margin: 3vh 0;
+}
+.pie-pagina .grupo-1 .box .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    color: #fff;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.red-social{
+    text-align: center;
+}
+.pie-pagina .grupo-1 .box .red-social a:hover{
+    color: hsl(231, 69%, 60%);
+}
+
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 30px;
+        padding: 35px 0px;
     }
 }
