--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 body{
     font-family: 'Rubik', sans-serif;
-    width: 100%;
+    max-width: 100%;
     overflow-x: hidden;
 }
 
@@ -151,6 +151,11 @@ ul.show{
 
 
 /* Main Styles */
+
+@media screen and (max-width: 858px) {
+
+}
+
 
 p{
     color: hsl(229, 8%, 60%);
@@ -356,18 +361,12 @@ h2, h3, h4, h5, h6{
 }
 /* Estilos del acordeón */
 .acordeon{
-    max-width: 100vh;
-    min-height: 100px;
     align-items: center;
     text-align: center;
 }
 
-.subapartado{
-    min-height: 50px;
-}
+
 .acordeon_titulo{
-    width: 100%;
-    min-height: 50px;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
@@ -442,13 +441,6 @@ div.subapartado:hover div.info{
 /* End of five container styles */
 
 
-@media screen and (min-width: 1024px ) {
-    .first_screen {
-        width: 1%;
-        background-color: #ff0000;
-    }
-}
-
 /* header styles */
 
 footer{
@@ -508,5 +500,53 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
         padding: 35px 0px;
+    }
+}
+/* End of header styles */
+
+/* Responsive computadores */
+
+
+@media screen and (min-width: 859px ) {
+    .first_container{
+        display: inline-block;
+        /* flex-direction: column; */
+    }
+    .first_screen{
+        text-align: end;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .first_text{
+        width: 50%;
+        position: relative;
+        top: 0vh;
+        right: 0vh;
+    }
+
+    .second_container{
+    padding: 0px 30vh;
+    }
+    .second_container h2{
+        text-align: center;
+    }
+    .buttons{
+        display: flex;
+        justify-content: space-around;
+        flex-flow:nowrap;
+    }
+    .third_container{
+        padding: 0px 30vh;
+    }
+    .third_container .mini_containers{
+        max-width: 50vh;
+
+    }
+    .third_container .mini_containers, .first_mini, .second_mini, .third_mini{
+        max-width: 50vh;
+        margin: 3vh auto !important;
+    }
+    .fourth_container {
+
     }
 }
